examples/example_2/pet/errors/product-name-error.js
class ProductNameError extends Error {

    constructor(...args) {
        super(...args)
        Error.captureStackTrace(this, this.constructor)
    }

}
module.exports = ProductNameError
